fixed critical overflow problem

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,7 +5,6 @@
 
 body {
     padding-top: 80px;
-    overflow: hidden;
 }
 
 #logo {
